# pdf2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE.txt  README.md  TODO.md
.github/workflows/: ci.yml
src/: convert.rs  file.rs  fmt.rs  header.rs  lib.rs
src/object/: error.rs  mod.rs
src/object/direct/: array.rs  boolean.rs  dictionary.rs  mod.rs  name.rs  null.rs
src/object/indirect/: id.rs  mod.rs  object.rs  reference.rs  stream.rs
src/object/type/: mod.rs
src/parse/: character_set.rs  error.rs  mod.rs  num.rs
src/pdf/: error.rs  mod.rs
src/process/: encoding.rs  error.rs  escape.rs  mod.rs
src/process/encoding/: error.rs  mod.rs
src/xref/: error.rs  mod.rs  pretable.rs  startxref.rs
tests/: README.md
tests/code/: 0aa43346a9df321584b2181fa2a4b17d_lzw_671.data  1F0F80D27D156F7EF35B1DF40B1BD3E8_dictionary.rs  3AB9790B3CB9A73CF4BF095B2CE17671_data.rs  3AB9790B3CB9A73CF4BF095B2CE17671_dictionary.rs  3AB9790B3CB9A73CF4BF095B2CE17671_stream.rs  3AB9790B3CB9A73CF4BF095B2CE17671_xobject.rs  483F2EC937A8888A3F98DD1FF73B1F6B_trailer.rs  8401FBC530C8AE9B8EC1425170A70921_trailer.rs  8E3F7CBC1ADD2112724D45EBD1E2B0C6_trailer.rs  A22408A93E27AD44B908FB70279DC7A0_data.rs  B72168B54640B245A7CCF42DCDC8C026_data.rs  B72168B54640B245A7CCF42DCDC8C026_stream.rs  B72168B54640B245A7CCF42DCDC8C026_subsection.rs  CD74097EBFE5D8A25FE8A229299730FA_dictionary.rs  F3D45259CBB36D09F04BF0D65BAAD3ED_section.rs  README.md  SYNTHETIC_subsection.rs  SYNTHETIC_trailer.rs
tests/data/: README.md  SYNTHETIC_lzw_malicious.py
(+33 files in other folders)
