[package]
authors = [ "Anwar Alameddin <anwaralameddin@gmail.com>" ]
description = "A package for inspecting PDF files."
edition = "2021"
license = "MIT"
name = "pdf2"
readme = "README.md"
repository = "https://github.com/anwaralameddin/pdf2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4.22"
# env_logger = "0.11.5"
# miniz_oxide = "0.8.0"
# sha2 = "0.10.8"
clap = { version = "^3.2.25", features = ["derive"] }
flate2 = "1.0.33"
nom = "7.1.3"
thiserror = "1.0.63"

[[bin]]
name = "pdf2"
path = "bin/main.rs"
